fix spacing

--- a/src/components/Banner.module.scss
+++ b/src/components/Banner.module.scss
@@ -6,15 +6,10 @@
 
 .bannerContent {
   h1 {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
   }
 
   h2 {
-    margin-bottom: 30px;
-  }
-
-  p {
-    margin-bottom: 15px;
-    padding-right: 40px;
+    margin-bottom: 1rem;
   }
 }
