--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -1,15 +1,13 @@
 .section {
-    padding: 60px 0;
+  padding: 60px 0;
 
-    p {
-        margin-bottom: 30px;
-    }
+  p {
+    margin-bottom: 1rem;
+  }
 }
 
 @media (max-width: 992px) {
-    .section {
-        padding: 60px 0;
-    }
+  .section {
+    padding: 60px 0;
+  }
 }
-
-
